<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/offers"
            android:icon="@drawable/offers"
            android:title="@string/offers" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/notification"
        android:title="@string/notifications" />

    <item
        android:id="@+id/myorders"
        android:icon="@drawable/myorders"
        android:title="@string/myorders" />

    <item
        android:id="@+id/wallet"
        android:icon="@drawable/wallet"
        android:title="@string/wallet" />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/settings"
        android:title="@string/setting" />

    <item
        android:id="@+id/aboutapp"
        android:icon="@drawable/aboutapp"
        android:title="@string/aboutapp" />



</menu>
